linespacing corrections

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,8 +7,6 @@ div { position: absolute; }
 #content-container { display: block; position: relative; width: 1440px;  margin-left: auto; margin-right: auto;  }
 
 #content-container > div{ position: relative; top:inherit; }
-
-#content-container > div{ position: relative; top:inherit; }
 #page_desktop__ek1 {
 	top: 0px;
 	left: 0px;
@@ -39,7 +37,6 @@ div { position: absolute; }
 	width: 100px;
 	height: 100px;
 }
-
 
 
 #paragraph{
@@ -82,7 +79,6 @@ div { position: absolute; }
 	border-radius: 30px;
 	background:rgba(255,255,255,1);
 }
-
 
 
 #birthmonth_box {
@@ -139,7 +135,6 @@ div { position: absolute; }
 }
 
 
-
 #birth_month {
 	top: 497px;
 	left: 267px;
@@ -177,7 +172,6 @@ div { position: absolute; }
 	text-align: left;
 	color:#FFFFFF;
 }
-
 
 
 #rectangle_6 {
@@ -233,7 +227,6 @@ div { position: absolute; }
 }
 
 
-
 #line_2 {
 	top: 269px;
 	left: 1055px;
@@ -259,7 +252,6 @@ div { position: absolute; }
 	height: 1px;
 	background:#FFFFFF;
 }
-
 
 
 #line_5 {
@@ -354,6 +346,7 @@ div { position: absolute; }
 	text-align: left;
 	color:#000000;
 }
+
 
 
 #kwame {
@@ -471,7 +464,6 @@ div { position: absolute; }
 	text-align: left;
 	color:#000000;
 }
-
 
 #friday {
 	top: 330px;
